--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "axios": "^1.2.0",
     "next": "13.0.4",
+    "next-fonts": "^1.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.3"
