--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next-fonts": "^1.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swiper": "^8.4.5",
     "typescript": "4.9.3"
   }
 }
